2025-04-10T01:17:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14370163858 # 609
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-10
* notice: last 14d: unq all: 1 5
* notice: prev accum: outdated-unq outdated-all / unq all: 133 367 / 134 368
* notice: next accum: outdated-unq outdated-all / unq all: 134 368 / 135 373
* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
* notice: removed / changed dates: [2025-03-15] / [2025-04-09]

2025-03-16T01:14:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13878438566 # 595
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-16
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 132 366 / 133 367
* notice: next accum: outdated-unq outdated-all / unq all: 133 367 / 134 368
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-21] / [2025-03-15]

2025-02-22T01:04:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13467955944 # 573
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-22
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 131 364 / 132 366
* notice: next accum: outdated-unq outdated-all / unq all: 132 366 / 133 367
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-01-07] / [2025-02-21]

2025-01-19T01:09:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12849007752 # 539