@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2025-04-10T01:17:09Z",
+  "timestamp" : "2025-04-11T01:17:49Z",
   "count_outdated" : 368,
   "uniques_outdated" : 134,
-  "count" : 373,
-  "uniques" : 135,
+  "count" : 377,
+  "uniques" : 136,
   "views" : [
     {
       "timestamp": "2025-04-09T00:00:00Z",
       "count": 5,
       "count_minmax": [ 5, 5 ],
       "count_decinc": [ 0, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-10T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
