@@ -1,10 +1,15 @@
 {
-  "count": 5,
-  "uniques": 1,
+  "count": 9,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2025-04-09T00:00:00Z",
       "count": 5,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-10T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
